# mypl

./: .gitignore  Cargo.toml  bacon.toml
docs/: lexical-analysis.md
logs/: general.txt  tokenization.txt
mypl-cli/: Cargo.toml
mypl-cli/src/: lib.rs
mypl-compiler/: Cargo.toml
mypl-compiler/src/: cli.rs  main.rs  prelude.rs  tokens.rs
mypl-lex/: Cargo.toml
mypl-lex/examples/: regex_usage.rs
mypl-lex/src/: keywords.rs  lexer.rs  lib.rs  patterns.rs  source_peeker.rs  span.rs  tokens.rs
mypl-parse/: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml
mypl-parse/app/: Main.hs  OldMain.hs-deprecated
mypl-parse/src/: Lexer.hs  Parser.hs  Syntax.hs
mypl-spec/: 01_demo.md  adt-usecase-1.md  bnf.md  showcase.md  spec-index.md  syntax-goals.md
mypl_ast/: Cargo.toml
mypl_ast/src/: ast.rs  ast_formatter.rs  lib.rs  visitor.rs
mypl_cli/: Cargo.toml
mypl_cli/src/: main.rs
mypl_interperter/: Cargo.toml
mypl_interperter/src/: environment.rs  error.rs  expr_eval.rs  interperter.rs  lib.rs  symbol.rs
mypl_lex/: Cargo.toml
mypl_lex/src/: lib.rs  span.rs  token.rs  tokenizer.rs
mypl_parse/: Cargo.toml
mypl_parse/src/: lib.rs  parse.rs  recursive_descent_parser.rs  token_kind_predicates.rs
mypl_playground/: Cargo.toml
mypl_playground/src/: main.rs
mypl_spec/: base.ebnf  bnf.md  language-features.md  showcase.md  syntax-goals.md
mypl_spec/grammar/: 010-base.ebnf  020-precedence.md  030-statements.md  040-global-variables.md  050-assignment.md  060-println.md
resources/: log4rs.yaml
sbin/: example-bad.sh  example.sh
(+23 files in other folders)
