[package]
name = "mypl_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mypl_lex = { path = "../mypl_lex" }
mypl_ast = { path = "../mypl_ast" }
mypl_parse = { path = "../mypl_parse" }
mypl_interperter = { path = "../mypl_interperter" }

clap = { version = "4.3.0", features = ["derive"] }
anyhow.workspace = true
thiserror = "1.0.40"
